# ITI_AVR_ATMEGA32

./: README.md
App/Lab1/: CMakeLists.txt
COTS/: CMakeLists.txt
COTS/COMMON/: BIT_MATH.h
COTS/HAL/: CMakeLists.txt
COTS/HAL/LCD/inc/: HLCD.h  HLCD_LCFG.h
COTS/HAL/LCD/src/: HLCD.c  HLCD_LCFG.c
COTS/HAL/LED/: CMakeLists.txt
COTS/HAL/LED/inc/: HLED.h  HLED_LCFG.h
COTS/HAL/LED/src/: HLED.c  HLED_LCFG.c
COTS/HAL/SEVENSEG/inc/: HSEVENSEG.h  HSEVENSEG_LCFG.h
COTS/HAL/SEVENSEG/src/: HSEVENSEG.c  HSEVENSEG_LCFG.c
COTS/HAL/SWITCH/: CMakeLists.txt
COTS/HAL/SWITCH/inc/: HSW.h  HSW_LCFG.h
COTS/HAL/SWITCH/src/: HSW.c  HSW_LCFG.c
COTS/MCAL/: CMakeLists.txt
COTS/MCAL/DIO/: CMakeLists.txt
COTS/MCAL/DIO/inc/: MDIO.h
COTS/MCAL/DIO/src/: MDIO.c  MDIO_LCFG.c
COTS/MCAL/EXTI/inc/: MEXTI.h
COTS/MCAL/EXTI/src/: MEXTI.c
COTS/MCAL/GIE/inc/: MGIE.h
COTS/MCAL/GIE/src/: MGIE.c
COTS/MCAL/MDIO/inc/: MDIO.h
COTS/MCAL/MDIO/src/: MDIO.c
COTS/MCAL/PORT/: CMakeLists.txt
COTS/MCAL/PORT/inc/: MPORT.h
COTS/MCAL/PORT/src/: MPORT.c  MPORT_LCFG.c
COTS/common/: BIT_MATH.h
LABS/LAB1/TASK1/: main.c
LABS/LAB1/TASK2/: main.c
LABS/LAB2/TASK1/: main.c
LABS/LAB2/TASK2/: main.c
LABS/LAB3/: CMakeLists.txt
LABS/LAB3/SIM/: Backup Of Lab3.pdsbak  Lab3.pdsprj  Lab3.pdsprj.LEGION.fazloka.workspace  Last Loaded Lab3.pdsbak
LABS/LAB3/src/: main.c
LABS/LAB5/: CMakeLists.txt
LABS/LAB5/SIM/: LAB5.pdsprj
LABS/LAB5/src/: main.c
LABS/LAB5_LED/: CMakeLists.txt
LABS/LAB5_LED/SIM/: Backup Of LAB5.pdsbak  LAB5.pdsprj  LAB5.pdsprj.LEGION.fazloka.workspace
LABS/LAB5_LED/src/: main.c
LABS/LAB5_SW/: CMakeLists.txt
LABS/LAB5_SW/src/: main.c
LABS/LAB_LCD/: CMakeLists.txt
LABS/LAB_LCD/SIM/: LAB5.pdsprj  LAB5.pdsprj.LEGION.fazloka.workspace
LABS/LAB_LCD/src/: main.c
Testing/Lab1/: CMakeLists.txt
Testing/Lab1/src/: main.c
